# tg_manga_bot

./: Cargo.toml
entity/: Cargo.toml
entity/src/: book.rs  chapter.rs  lib.rs  prelude.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220418_000001_create_table.rs
src/: main.rs
src/database/: chapter.rs  database.rs  init.rs  manga.rs  mod.rs
src/db/: mod.rs
src/db/migrations/: mod.rs
src/db/repositories/: mod.rs
src/db/repositories/book/: repository.rs
src/db/repositories/chapter/: repository.rs
src/domain/: mod.rs
src/domain/books/: book.rs
src/domain/chapters/: mod.rs
src/entity/: chapters.rs  manga.rs  mod.rs  prelude.rs
src/utils/: keyboard.rs
