[package]
name = "my_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
serde = "1.0.136"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.56"
dotenv = "0.15.0"
tokio-postgres = "0.7.5"