[package]
name = "tg_manga_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.8.0", features = ["macros", "auto-send"] }
log = "0.4.16"
serde = "1.0.136"
tokio = { version =  "1.17.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.56"
dotenv = "0.15.0"
tokio-postgres = "0.7.5"
sea-orm = { version = "0.7.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }
strum = { version = "0.24.0", features = ["derive"] }
